fix: Unreadable text color in selected list elements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 $primary: #b6eb3f;
+$component-active-color: black;
 $dark: #1e3881;
 $color-mode-type: 'media-query';
 
